<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_margin="10dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvGameNr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GAME #"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btnTeamA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTeamA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.184"
            android:layout_weight="1"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtVS"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnTeam2"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toEndOf="@+id/btnTeam1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:layout_weight="1"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btnTeamB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTeamB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.184"
            android:layout_weight="1"
            android:textAlignment="center"/>
    </LinearLayout>
        <Button
            android:id="@+id/btnSimulate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSimulate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301"
            android:layout_gravity="center"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btnResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtResult"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.301"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>